unnecessary horizontal scrollbar issue fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: $font-primary;
+  overflow-x: hidden;
 }
 
 * {
